pythonでbib->jsonできるように

--- a/public/liter.bib
+++ b/public/liter.bib
@@ -7,11 +7,30 @@
   isbn={4-320-12032-9},
   price={13,000},
   size={296p. B5},
-  abstract={身体性、知能、ロボットに関して幅広く非常に示唆に富む議論がされている。自律エージェントの設計原理の提案が特に意欲的。}
+  abstract={身体性、知能、ロボットに関して幅広く非常に示唆に富む議論がされている。自律エージェントの設計原理の提案が特に意欲的。},
+  memo={なし},
+  tags={embodiment}
 }
 
 @article{tye1997qualia,
   title={Qualia},
   author={Tye, Michael},
-  year={1997}
+  year={1997},
+  abstract={クオリア。},
+  memo={なし},
+  tags={emotion}
+}
+
+@article{大平英樹2014感情的意思決定を支える脳と身体の機能的関連,
+  title={感情的意思決定を支える脳と身体の機能的関連},
+  author={大平英樹},
+  journal={心理学評論},
+  volume={57},
+  number={1},
+  pages={98--123},
+  year={2014},
+  publisher={心理学評論刊行会},
+  abstract={SMH関連の概説},
+  memo={fMRIとIGTの関連が述べられている。},
+  tags={emotion, interoception, SMH}
 }
