--- a/public/liter.bib
+++ b/public/liter.bib
@@ -1,17 +1,3 @@
-@book{book:Pfeifer:知の創成,
-  author={Rolf Pfeifer and Christian Scheier},
-  title={知の創成 ---身体性認知科学への招待---},
-  publisher={共立出版},
-  year={2001},
-  contents={第I部 知能の研究--基礎と課題,第II部 身体性認知科学の枠組み,第III部 さまざまなアプローチとエージェントの例,第IV部 知的システムの原理,第V部 設計と評価,第VI部 未来へ向けて},
-  isbn={4-320-12032-9},
-  price={13,000},
-  size={296p. B5},
-  abstract={身体性、知能、ロボットに関して幅広く非常に示唆に富む議論がされている。自律エージェントの設計原理の提案が特に意欲的。},
-  memo={なし},
-  tags={embodiment}
-}
-
 @article{tye1997qualia,
   title={Qualia},
   author={Tye, Michael},
@@ -31,6 +17,345 @@
   year={2014},
   publisher={心理学評論刊行会},
   abstract={SMH関連の概説},
-  memo={fMRIとIGTの関連が述べられている。},
+  memo={fMRIとIGTの関連、free energy由来の計算論モデルが述べられている。},
   tags={emotion, interoception, SMH}
+}
+
+@article{James1884,
+ ISSN = {00264423, 14602113},
+ URL = {http://www.jstor.org/stable/2246769},
+ author = {William James},
+ journal = {Mind},
+ number = {34},
+ pages = {188--205},
+ publisher = {[Oxford University Press, Mind Association]},
+ title = {What is an Emotion?},
+ urldate = {2025-01-13},
+ volume = {9},
+ year = {1884},
+ memo={情動の末梢起源説について},
+ abstract={「悲しいから泣くのではなく、泣くから悲しい」という例のように身体反応、内受容感覚(内臓、骨格筋、血管(これはLangeが述べた))が脳に伝わることで情動が表出するとした。末梢起源説。},
+ tags={emotion, interoception}
+}
+
+@article{cannon1927james,
+  title={The James-Lange theory of emotions: A critical examination and an alternative theory},
+  author={Cannon, Walter B},
+  journal={The American journal of psychology},
+  volume={39},
+  number={1/4},
+  pages={106--124},
+  year={1927},
+  publisher={JSTOR},
+ memo={CannonとBirdによる中枢起源説},
+ abstract={James-Lange説への批判。具体的な外部刺激とそれによって表出する情動の説明が不足していること、同じ身体反応から異なる情動を示すこと、末梢反応の誘発を阻害しても情動が起こりうる点などを指摘し、情動の起源は大脳辺縁系、視床下部などでの身体反応の評価にあるとした。情動的行動を抑制できないケースから、大脳皮質とは分離されていると考えている。},
+ tags={emotion}
+}
+
+@book{Damasio1994,
+author = {A. R. Damasio},
+title = {Descartes’ Error},
+publisher = {Putnam Adult},
+year = {1994},
+ memo={Damasioによるsomatic marker hypothesisの提唱、末梢起源の流れを汲んでいる},
+ abstract={内受容感覚由来の情動は不確かな環境において意思決定をドライブする役割があるということを腹内側前頭前野損傷の人が社会的意思決定で障害を持つことから提案した。},
+ tags={emotion, interoception, SMH}
+}
+
+@inproceedings{panumate2016generic,
+  title={A generic model for emotional ai in real-time multiplayer fighting games},
+  author={Panumate, Chetprayoon and Miyake, Youichiro and Iida, Hiroyuki},
+  booktitle={Games and Learning Alliance: 5th International Conference, GALA 2016, Utrecht, The Netherlands, December 5--7, 2016, Proceedings 5},
+  pages={395--404},
+  year={2016},
+  organization={Springer},
+ memo={},
+ abstract={}
+}
+
+@article{misawa2012RL,
+  title={強化学習と情動学習に基づく意思決定法: 利己的な判断による協調行動の創発},
+  author={三澤秀明 and 松田充史 and 堀尾恵一},
+  journal={知能と情報},
+  volume={24},
+  number={1},
+  pages={582--591},
+  year={2012},
+  publisher={日本知能情報ファジィ学会},
+ memo={},
+ abstract={}
+}
+
+@inproceedings{zhou2018emotional,
+  title={Emotional chatting machine: Emotional conversation generation with internal and external memory},
+  author={Zhou, Hao and Huang, Minlie and Zhang, Tianyang and Zhu, Xiaoyan and Liu, Bing},
+  booktitle={Proceedings of the AAAI conference on artificial intelligence},
+  volume={32},
+  number={1},
+  year={2018},
+ memo={},
+ abstract={}
+}
+
+@article{article:Vincent2022,
+  title={Spatiotemporal dynamics of noradrenaline during learned behaviour},
+  journal={Nature},
+  year={2022},
+  month={June},
+  pages={732-738},
+  volume={606},
+  author={Vincent Breton-Provencher, Gabrielle T. Drummond, Jiesi Feng, Yulong Li, Mriganka Sur},
+  doi={10.1038/s41586-022-04782-2},
+ memo={},
+ abstract={}
+}
+
+@article{Shea1996,
+author = {Shea, SA},
+title = {Behavioural and arousal-related influences on breathing in humans},
+journal = {Experimental Physiology},
+volume = {81},
+number = {1},
+pages = {1-26},
+doi = {https://doi.org/10.1113/expphysiol.1996.sp003911},
+url = {https://physoc.onlinelibrary.wiley.com/doi/abs/10.1113/expphysiol.1996.sp003911},
+eprint = {https://physoc.onlinelibrary.wiley.com/doi/pdf/10.1113/expphysiol.1996.sp003911},
+abstract = {This review has described the many behavioural and arousal-related influences on breathing and the extent of these influences in humans. The chief examples have included the effect on breathing of altered mental activity, wakefulness and sleep, and learned respiratory responses. Determining the precise neurological mechanisms underlying these effects represents a difficult challenge to respiratory physiologists who seek to understand the respiratory control system of awake behaving humans. Nevertheless, insight into the various forebrain and brainstem inputs to respiratory muscles has been gained by studies of breathing during particular behaviours (when either voluntary or reflex breathing predominates) or in particular neurological patients (in whom either voluntary or reflex breathing is defective). With developments in brain imaging techniques, such as functional magnetic resonance imaging, it may soon be possible to determine more precisely the various anatomical sources and timing of the motor commands to breathe during different behaviours, states of arousal and sleep.},
+year = {1996},
+ memo={},
+ abstract={}
+}
+
+@article {Bernardi2006,
+	author = {Bernardi, L and Porta, C and Sleight, P},
+	title = {Cardiovascular, cerebrovascular, and respiratory changes induced by different types of music in musicians and non-musicians: the importance of silence},
+	volume = {92},
+	number = {4},
+	pages = {445--452},
+	year = {2006},
+	doi = {10.1136/hrt.2005.064600},
+	publisher = {BMJ Publishing Group Ltd},
+	issn = {1355-6037},
+	URL = {https://heart.bmj.com/content/92/4/445},
+	eprint = {https://heart.bmj.com/content/92/4/445.full.pdf},
+	journal = {Heart},
+ memo={},
+ abstract={}
+}
+
+@article{Hilton1982,
+    author = {Hilton, S. M.},
+    title = {The Defence-Arousal System and its Relevance for Circulatory and Respiratory Control},
+    journal = {Journal of Experimental Biology},
+    volume = {100},
+    number = {1},
+    pages = {159-174},
+    year = {1982},
+    month = {10},
+    issn = {0022-0949},
+    doi = {10.1242/jeb.100.1.159},
+    url = {https://doi.org/10.1242/jeb.100.1.159},
+    eprint = {https://journals.biologists.com/jeb/article-pdf/100/1/159/2838093/jexbio\_100\_1\_159.pdf},
+ memo={},
+ abstract={}
+}
+
+@article{Mizuhara2021,
+  title={呼吸位相が外界事象の知覚・認知に及ぼす効果},
+  author={水原啓太 and 入戸野宏},
+  journal={心理学評論},
+  volume={64},
+  number={2},
+  pages={189--203},
+  year={2021},
+  publisher={心理学評論刊行会},
+ memo={},
+ abstract={}
+}
+
+@article{yousef2020deep,
+  title={Deep Breathing Governs Binocular Rivalry},
+  author={Yousef, Ahmad},
+  year={2020},
+  publisher={PsyArXiv},
+ memo={},
+ abstract={}
+}
+
+@article{Kimura2022,
+  title={心臓からの内受容信号はリスク下での意思決定を調節する},
+  author={木村健太 and 金山範明 and 片平健太郎},
+  journal={感情心理学研究},
+  volume={30},
+  number={Supplement},
+  pages={OS2-05-OS2-05},
+  year={2022},
+  doi={10.4092/jsre.30.Supplement_OS2-05},
+ memo={},
+ abstract={}
+}
+
+@article{Ohsumi2018,
+  title={社会的意思決定における心臓活動と内受容感覚の機能的役割},
+  author={大隅尚広},
+  journal={日本心理学会大会発表論文集},
+  volume={82},
+  number={ },
+  pages={1AM-095-1AM-095},
+  year={2018},
+  doi={10.4992/pacjpa.82.0_1AM-095},
+ memo={},
+ abstract={}
+}
+
+@article{mayer2022gut,
+  title={The gut--brain axis},
+  author={Mayer, Emeran A and Nance, Karina and Chen, Shelley},
+  journal={Annual review of medicine},
+  volume={73},
+  number={1},
+  pages={439--453},
+  year={2022},
+  publisher={Annual Reviews},
+ memo={},
+ abstract={}
+}
+
+@article{benning2005psychopathy,
+  title={Psychopathy, startle blink modulation, and electrodermal reactivity in twin men},
+  author={Benning, Stephen D and Patrick, Christopher J and Iacono, William G},
+  journal={Psychophysiology},
+  volume={42},
+  number={6},
+  pages={753--762},
+  year={2005},
+  publisher={Wiley Online Library},
+ memo={},
+ abstract={}
+}
+
+@article{werner2013interoceptive,
+  title={Interoceptive awareness moderates neural activity during decision-making},
+  author={Werner, Natalie S and Schweitzer, Nicola and Meindl, Thomas and Duschek, Stefan and Kambeitz, Joseph and Schandry, Rainer},
+  journal={Biological psychology},
+  volume={94},
+  number={3},
+  pages={498--506},
+  year={2013},
+  publisher={Elsevier},
+ memo={},
+ abstract={}
+}
+
+@article{fiene2015investigating,
+  title={Investigating interoception and body awareness in adults with and without autism spectrum disorder},
+  author={Fiene, Lisa and Brownlow, Charlotte},
+  journal={Autism Research},
+  volume={8},
+  number={6},
+  pages={709--716},
+  year={2015},
+  publisher={Wiley Online Library},
+ memo={},
+ abstract={}
+}
+
+@article{paulus2010interoception,
+  title={Interoception in anxiety and depression},
+  author={Paulus, Martin P and Stein, Murray B},
+  journal={Brain structure and Function},
+  volume={214},
+  pages={451--463},
+  year={2010},
+  publisher={Springer},
+ memo={},
+ abstract={}
+}
+
+@article{moriguchi2013neuroimaging,
+  title={Neuroimaging studies of alexithymia: physical, affective, and social perspectives},
+  author={Moriguchi, Yoshiya and Komaki, Gen},
+  journal={BioPsychoSocial medicine},
+  volume={7},
+  pages={1--12},
+  year={2013},
+  publisher={Springer},
+ memo={},
+ abstract={}
+}
+
+@article{bechara1994insensitivity,
+  title={Insensitivity to future consequences following damage to human prefrontal cortex},
+  author={Bechara, Antoine and Damasio, Antonio R and Damasio, Hanna and Anderson, Steven W},
+  journal={Cognition},
+  volume={50},
+  number={1-3},
+  pages={7--15},
+  year={1994},
+  publisher={Elsevier},
+ memo={},
+ abstract={}
+}
+
+@article{bechara1996failure,
+  title={Failure to respond autonomically to anticipated future outcomes following damage to prefrontal cortex},
+  author={Bechara, Antoine and Tranel, Daniel and Damasio, Hanna and Damasio, Antonio R},
+  journal={Cerebral cortex},
+  volume={6},
+  number={2},
+  pages={215--225},
+  year={1996},
+  publisher={Oxford University Press},
+ memo={},
+ abstract={}
+}
+
+@article{bechara1997deciding,
+  title={Deciding advantageously before knowing the advantageous strategy},
+  author={Bechara, Antoine and Damasio, Hanna and Tranel, Daniel and Damasio, Antonio R},
+  journal={Science},
+  volume={275},
+  number={5304},
+  pages={1293--1295},
+  year={1997},
+  publisher={American Association for the Advancement of Science},
+ memo={},
+ abstract={}
+}
+
+@article{bechara1999different,
+  title={Different contributions of the human amygdala and ventromedial prefrontal cortex to decision-making},
+  author={Bechara, Antoine and Damasio, Hanna and Damasio, Antonio R and Lee, Gregory P},
+  journal={Journal of neuroscience},
+  volume={19},
+  number={13},
+  pages={5473--5481},
+  year={1999},
+  publisher={Soc Neuroscience},
+ memo={},
+ abstract={}
+}
+
+@article{janbesaraei2024human,
+  title={Do Human Reinforcement Learning Models Account for Key Experimental Choice Patterns in the Iowa Gambling Task?},
+  author={Janbesaraei, Sherwin Nedaei and Rasanan, Amir Hosein Hadian and Nejati, Vahid and Rad, Jamal Amani},
+  journal={Computational Brain \& Behavior},
+  pages={1--35},
+  year={2024},
+  publisher={Springer},
+ memo={},
+ abstract={}
+}
+
+@article{busemeyer2002contribution,
+  title={A contribution of cognitive decision models to clinical assessment: decomposing performance on the Bechara gambling task.},
+  author={Busemeyer, Jerome R and Stout, Julie C},
+  journal={Psychological assessment},
+  volume={14},
+  number={3},
+  pages={253},
+  year={2002},
+  publisher={American Psychological Association},
+ memo={},
+ abstract={}
 }
