--- a/public/liter.bib
+++ b/public/liter.bib
@@ -18,7 +18,7 @@
   publisher={心理学評論刊行会},
   abstract={SMH関連の概説},
   memo={fMRIとIGTの関連、free energy由来の計算論モデルが述べられている。},
-  tags={emotion, interoception, SMH}
+  tags={emotion, interoception, SMH, IGT}
 }
 
 @article{James1884,
@@ -69,8 +69,9 @@ year = {1994},
   pages={395--404},
   year={2016},
   organization={Springer},
- memo={},
- abstract={}
+ memo={本当に情動なのかどうかは定かでない、心理学的な定義ともそぐわない情動のような何か。},
+ abstract={emotionをmoodやpersonality, memoryといった要素に分解してgame agentに実装した研究。},
+ tags={emotionalAI, emotion}
 }
 
 @article{misawa2012RL,
@@ -82,8 +83,9 @@ year = {1994},
   pages={582--591},
   year={2012},
   publisher={日本知能情報ファジィ学会},
- memo={},
- abstract={}
+ memo={情動的なstateパラメタをRLによって学習するらしい。},
+ abstract={協調行動と敵対行動という情動行動に注視してRLagentを実装。協調行動を学習。},
+ tags={emotionalAI, emotion, RL}
 }
 
 @inproceedings{zhou2018emotional,
@@ -93,8 +95,9 @@ year = {1994},
   volume={32},
   number={1},
   year={2018},
- memo={},
- abstract={}
+ memo={固定された情動での対応しかできない。},
+ abstract={あらかじめ定義された情動と言語情報の結びつけを用いて対話をするchatBotの実装。},
+ tags={emotionalAI, emotion, chatBot}
 }
 
 @article{article:Vincent2022,
@@ -106,8 +109,9 @@ year = {1994},
   volume={606},
   author={Vincent Breton-Provencher, Gabrielle T. Drummond, Jiesi Feng, Yulong Li, Mriganka Sur},
   doi={10.1038/s41586-022-04782-2},
- memo={},
- abstract={}
+ memo={LC-NA系の2つの大きな役割、不確実性に対する探索を促すこと、罰、予測誤差による注意機能の亢進。},
+ abstract={マウスのLC-NA系の振る舞いと、報酬、罰を伴う行動の関連についての実験。LC-NA系が証拠の少ない行動を促し(不確実性のエンコーディング)、報酬の予測に対する罰のシグナルはLC-NAから広範なターゲット領域(線条体や海馬、PFCなど)に持続的な活動を促し、誤った行動の情報から目的行動への注意が高められるという結果。},
+ tags={LC-NA, neuromodulation}
 }
 
 @article{Shea1996,
@@ -120,10 +124,10 @@ pages = {1-26},
 doi = {https://doi.org/10.1113/expphysiol.1996.sp003911},
 url = {https://physoc.onlinelibrary.wiley.com/doi/abs/10.1113/expphysiol.1996.sp003911},
 eprint = {https://physoc.onlinelibrary.wiley.com/doi/pdf/10.1113/expphysiol.1996.sp003911},
-abstract = {This review has described the many behavioural and arousal-related influences on breathing and the extent of these influences in humans. The chief examples have included the effect on breathing of altered mental activity, wakefulness and sleep, and learned respiratory responses. Determining the precise neurological mechanisms underlying these effects represents a difficult challenge to respiratory physiologists who seek to understand the respiratory control system of awake behaving humans. Nevertheless, insight into the various forebrain and brainstem inputs to respiratory muscles has been gained by studies of breathing during particular behaviours (when either voluntary or reflex breathing predominates) or in particular neurological patients (in whom either voluntary or reflex breathing is defective). With developments in brain imaging techniques, such as functional magnetic resonance imaging, it may soon be possible to determine more precisely the various anatomical sources and timing of the motor commands to breathe during different behaviours, states of arousal and sleep.},
 year = {1996},
- memo={},
- abstract={}
+ memo={あまり細かく読んでないです},
+ abstract={呼吸の覚醒や行動への影響について。詳細な神経メカニズムは未だわからないが、一部の例から脳幹や前頭葉から呼吸筋への入力の証拠が得られている。},
+ tags={respiration, emotion, arousal}
 }
 
 @article {Bernardi2006,
@@ -139,8 +143,9 @@ year = {1996},
 	URL = {https://heart.bmj.com/content/92/4/445},
 	eprint = {https://heart.bmj.com/content/92/4/445.full.pdf},
 	journal = {Heart},
- memo={},
- abstract={}
+ memo={HRVなどの呼吸心拍指標と音楽のテンポの関係。まあそれはそうよねという結果。音楽家は一般人よりテンポと呼吸の感度？が高いらしい。},
+ abstract={音楽と覚醒の関係。テンポと呼吸の関係について示唆されている。},
+ tags={respiration, emotion, arousal}
 }
 
 @article{Hilton1982,
@@ -156,8 +161,9 @@ year = {1996},
     doi = {10.1242/jeb.100.1.159},
     url = {https://doi.org/10.1242/jeb.100.1.159},
     eprint = {https://journals.biologists.com/jeb/article-pdf/100/1/159/2838093/jexbio\_100\_1\_159.pdf},
- memo={},
- abstract={}
+ memo={恐怖や怒りのような基本情動と血管系の反応の関連について、本能的なことに近い？},
+ abstract={防御反応と心血管反応、呼吸器系の反応について述べている。心血管系から筋骨格系への遠心性経路には動脈血圧の調節に関わるニューロン群があり、有害刺激に対して活性化するよう働いている可能性がある。},
+ tags={respiration, emotion}
 }
 
 @article{Mizuhara2021,
@@ -169,8 +175,9 @@ year = {1996},
   pages={189--203},
   year={2021},
   publisher={心理学評論刊行会},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={呼吸位相、特に吸気と呼気で注意を高める、リラックスするといったところが顕著に変化する。},
+ tags={respiration}
 }
 
 @article{yousef2020deep,
@@ -178,8 +185,9 @@ year = {1996},
   author={Yousef, Ahmad},
   year={2020},
   publisher={PsyArXiv},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={呼吸位相によって両眼視野闘争の知覚交替確率(平均交替時間)が変化する。},
+ tags={respiration, BR}
 }
 
 @article{Kimura2022,
@@ -191,8 +199,9 @@ year = {1996},
   pages={OS2-05-OS2-05},
   year={2022},
   doi={10.4092/jsre.30.Supplement_OS2-05},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={拡張期と収縮期でリスク下での行動選択が変化する。},
+ tags={interoception, SMH}
 }
 
 @article{Ohsumi2018,
@@ -204,8 +213,9 @@ year = {1996},
   pages={1AM-095-1AM-095},
   year={2018},
   doi={10.4992/pacjpa.82.0_1AM-095},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={心拍数が減ることによって社会的行動での公正な行動を促される。リスク回避的。},
+ tags={interoception, SMH}
 }
 
 @article{mayer2022gut,
@@ -217,8 +227,9 @@ year = {1996},
   pages={439--453},
   year={2022},
   publisher={Annual Reviews},
- memo={},
- abstract={}
+ memo={全然読んでない},
+ abstract={脳腸相関について、腸内環境悪い→ストレスを感じやすい},
+ tags={gutBrainAxis, interoception}
 }
 
 @article{benning2005psychopathy,
@@ -230,8 +241,9 @@ year = {1996},
   pages={753--762},
   year={2005},
   publisher={Wiley Online Library},
- memo={},
- abstract={}
+ memo={内受容精度、自己受容認識的な。},
+ abstract={罪悪感や罰への感受性が低い性格特性、サイコパシーの人はリスク選択下において心拍変化が鈍い。},
+ tags={interoception, SMH}
 }
 
 @article{werner2013interoceptive,
@@ -243,8 +255,9 @@ year = {1996},
   pages={498--506},
   year={2013},
   publisher={Elsevier},
- memo={},
- abstract={}
+ memo={SCRを見せるとパフォーマンス向上→自己受容認識の高さが合理的判断を促す},
+ abstract={低い罰への感覚が内受容への意識によって改善する。},
+ tags={interoception, SMH}
 }
 
 @article{fiene2015investigating,
@@ -256,8 +269,9 @@ year = {1996},
   pages={709--716},
   year={2015},
   publisher={Wiley Online Library},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={ASDの人は内受容、身体への認識が低い。},
+ tags={interoception}
 }
 
 @article{paulus2010interoception,
@@ -268,8 +282,9 @@ year = {1996},
   pages={451--463},
   year={2010},
   publisher={Springer},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={鬱や心配性の人は内受容認識が低い。},
+ tags={interoception}
 }
 
 @article{moriguchi2013neuroimaging,
@@ -280,8 +295,9 @@ year = {1996},
   pages={1--12},
   year={2013},
   publisher={Springer},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={情動状態を知ることができないアレキシサイミアは内受容の自己認識の低さ、気づきの欠如に関係する。},
+ tags={interoception}
 }
 
 @article{bechara1994insensitivity,
@@ -293,8 +309,9 @@ year = {1996},
   pages={7--15},
   year={1994},
   publisher={Elsevier},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={IGT結果とPFC損傷の関連},
+ tags={SMH, IGT, interoception}
 }
 
 @article{bechara1996failure,
@@ -306,8 +323,9 @@ year = {1996},
   pages={215--225},
   year={1996},
   publisher={Oxford University Press},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={IGT},
+ tags={SMH, IGT, interoception}
 }
 
 @article{bechara1997deciding,
@@ -319,8 +337,9 @@ year = {1996},
   pages={1293--1295},
   year={1997},
   publisher={American Association for the Advancement of Science},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={IGTの選択傾向には段階的なフェーズが存在する。},
+ tags={SMH, IGT, interoception}
 }
 
 @article{bechara1999different,
@@ -332,8 +351,9 @@ year = {1996},
   pages={5473--5481},
   year={1999},
   publisher={Soc Neuroscience},
- memo={},
- abstract={}
+ memo={よく読んでいない},
+ abstract={扁桃体とvmPFCの役割について述べている？},
+ tags={SMH, IGT, interoception}
 }
 
 @article{janbesaraei2024human,
@@ -343,8 +363,9 @@ year = {1996},
   pages={1--35},
   year={2024},
   publisher={Springer},
- memo={},
- abstract={}
+ memo={なし},
+ abstract={IGTの数理モデルについてのreview},
+ tags={IGT, interoception, RL}
 }
 
 @article{busemeyer2002contribution,
@@ -356,6 +377,560 @@ year = {1996},
   pages={253},
   year={2002},
   publisher={American Psychological Association},
- memo={},
- abstract={}
+ memo={期待値を蓄積するだけ、softmax確率で選択確率を更新},
+ abstract={最初の強化学習過程IGTモデルであるExpectation-Valence学習モデル},
+ tags={IGT, RL}
+}
+
+@article{lin2007deck,
+  title={Is deck B a disadvantageous deck in the Iowa Gambling Task?},
+  author={Lin, Ching-Hung and Chiu, Yao-Chu and Lee, Po-Lei and Hsieh, Jen-Chuen},
+  journal={Behavioral and Brain Functions},
+  volume={3},
+  pages={1--10},
+  year={2007},
+  publisher={Springer},
+  memo={なし},
+  abstract={IGTにおける勝率(+の報酬を得られる確率)が高い選択へ選択が集中する勝率効果について},
+  tags={IGT}
+}
+
+@article{chiu2008immediate,
+  title={Immediate gain is long-term loss: Are there foresighted decision makers in the Iowa Gambling Task?},
+  author={Chiu, Yao-Chu and Lin, Ching-Hung and Huang, Jong-Tsun and Lin, Shuyeu and Lee, Po-Lei and Hsieh, Jen-Chuen},
+  journal={Behavioral and Brain Functions},
+  volume={4},
+  pages={1--10},
+  year={2008},
+  publisher={Springer},
+  memo={なし},
+  abstract={IGTの勝率効果が強い性質であることを様々な分布で示している},
+  tags={IGT}
+}
+
+@article{ahn2014decision,
+  title={Decision-making in stimulant and opiate addicts in protracted abstinence: evidence from computational modeling with pure users},
+  author={Ahn, Woo-Young and Vasilev, Georgi and Lee, Sung-Ha and Busemeyer, Jerome R and Kruschke, John K and Bechara, Antoine and Vassileva, Jasmin},
+  journal={Frontiers in psychology},
+  volume={5},
+  pages={849},
+  year={2014},
+  publisher={Frontiers Media SA},
+  memo={なし},
+  abstract={IGTの数理モデルであるProspect-Valence学習とValue-plus-Perseveranceモデルについて},
+  tags={IGT, RL}
+}
+
+@article{haines2018outcome,
+  title={The outcome-representation learning model: A novel reinforcement learning model of the iowa gambling task},
+  author={Haines, Nathaniel and Vassileva, Jasmin and Ahn, Woo-Young},
+  journal={Cognitive science},
+  volume={42},
+  number={8},
+  pages={2534--2561},
+  year={2018},
+  publisher={Wiley Online Library},
+  memo={なし},
+  abstract={outcome-representation学習モデルについて。PVLなどより高い精度とパラメタと精神疾患などの異常との相関がある。},
+  tags={IGT, RL}
+}
+
+@article{moreno2023outcome,
+  title={The outcome-representation learning model: impairments in decision-making in adolescents with excess weight},
+  author={Moreno-Padilla, Mar{\'\i}a and Alacreu-Crespo, Adri{\'a}n and Guillaume, Sebastien and Reyes del Paso, Gustavo A},
+  journal={Current Psychology},
+  volume={42},
+  number={26},
+  pages={22404--22414},
+  year={2023},
+  publisher={Springer},
+  memo={なし},
+  abstract={過体重の人はIGTのパフォーマンスが低いことをORLでモデル化},
+  tags={IGT, RL}
+}
+
+@inproceedings{kawahara2022uncertain,
+  title={不確実な状況における学習とエフォートフル・コントロール},
+  author={河原哲雄},
+  booktitle={日本認知心理学会発表論文集 日本認知心理学会第 20 回大会},
+  pages={44--44},
+  year={2022},
+  organization={日本認知心理学会},
+  memo={エフォートフルコントロールと言われてもまあ相関はあるよねという感じ},
+  abstract={ORLの注意パラメタと選択的注意に関する心理指標が相関する},
+  tags={IGT, RL}
+}
+
+@article{ligneul2019sequential,
+  title={Sequential exploration in the Iowa gambling task: validation of a new computational model in a large dataset of young and old healthy participants},
+  author={Ligneul, Romain},
+  journal={PLoS computational biology},
+  volume={15},
+  number={6},
+  pages={e1006989},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA},
+  memo={なし},
+  abstract={Value-plus-Explorarionモデル、指向性探索と非指向性探索を明示的に表現、explorationとexploitationのバランスに注目した},
+  tags={IGT, RL}
+}
+
+@article{aghajanian1977evidence,
+  title={Evidence for norepinephrine-mediated collateral inhibition of locus coeruleus neurons},
+  author={Aghajanian, GK and Cedarbaum, JM and Wang, RY},
+  journal={Brain research},
+  volume={136},
+  number={3},
+  pages={570--577},
+  year={1977},
+  publisher={Elsevier},
+  memo={なし},
+  abstract={LCのNA作動性ニューロンについて調べた},
+  tags={LC-NA}
+}
+
+@article{strawn2008noradrenergic,
+  title={Noradrenergic dysfunction and the psychopharmacology of posttraumatic stress disorder},
+  author={Strawn, Jeffrey R and Geracioti Jr, TD},
+  journal={Depression and anxiety},
+  volume={25},
+  number={3},
+  pages={260--271},
+  year={2008},
+  publisher={Wiley Online Library},
+  memo={注意機能が暴走しているみたいな},
+  abstract={PTSD患者はその記憶の想起時にNA系が強く反応},
+  tags={LC-NA}
+}
+
+@article{bondareff1982loss,
+  title={Loss of neurons of origin of the adrenergic projection to cerebral cortex (nucleus locus ceruleus) in senile dementia},
+  author={Bondareff, William and Mountjoy, Christopher Q and Roth, Martin},
+  journal={Neurology},
+  volume={32},
+  number={2},
+  pages={164--164},
+  year={1982},
+  publisher={AAN Enterprises},
+  memo={なし},
+  abstract={老年性アルツハイマー患者はLCニューロンの8割がない},
+  tags={LC-NA}
+}
+
+@article{diamond2007temporal,
+  title={The temporal dynamics model of emotional memory processing: A synthesis on the neurobiological basis of stress-induced amnesia, flashbulb and traumatic memories, and the Yerkes-Dodson law},
+  author={Diamond, David M and Campbell, Adam M and Park, Collin R and Halonen, Joshua and Zoladz, Phillip R},
+  journal={Neural plasticity},
+  volume={2007},
+  number={1},
+  pages={060803},
+  year={2007},
+  publisher={Wiley Online Library},
+  memo={NAの覚醒との関連、Yerkes-Dodsonの法則からも推測できる},
+  abstract={タスクパフォーマンスとLC-NA系の活動の間に逆U字が見られる},
+  tags={LC-NA, invU, neuromodulation}
+}
+
+@article{astonjones2005,
+  author          = {Aston-Jones G, Cohen JD},
+  journal         = {Annu Rev Neurosci},
+  number          = {},
+  title           = {An integrative theory of locus coeruleus-norepinephrine function: adaptive gain and optimal performance},
+  volume          = {28},
+  year            = {2005},
+  pages           = {403-450},
+  doi             = {10.1146/annurev.neuro.28.061604.135709},
+  memo={サルのLCは前帯状皮質とOFCから直接入力を受ける},
+  abstract={LC活動の位相性と持続性の2つがexploration-exploitationに関連している。サルの実験とモデル化について},
+  tags={LC-NA, RL}
+}
+
+@InProceedings{xing2022,
+  author="Xing, Jinwei
+  and Zou, Xinyun
+  and Pilly, Praveen K.
+  and Ketz, Nicholas A.
+  and Krichmar, Jeffrey L.",
+  editor="Ca{\~{n}}amero, Lola
+  and Gaussier, Philippe
+  and Wilson, Myra
+  and Boucenna, Sofiane
+  and Cuperlier, Nicolas",
+  title="Adapting to Environment Changes Through Neuromodulation of Reinforcement Learning",
+  booktitle="From Animals to Animats 16",
+  year="2022",
+  publisher="Springer International Publishing",
+  address="Cham",
+  pages="115--126",
+  isbn="978-3-031-16770-6",
+  memo={報酬系変化によって知識を利用したり、まっさらから学習し直すことによりスムーズな適応が可能},
+  abstract={ACh系による記憶とNA系による新奇刺激への注意を元にしたRLagentの実装により2次元空間やMujoco上での環境(報酬系)変化への適応性を高める。},
+  tags={RL, neuromodulation}
+}
+
+@inproceedings{sandi2008,
+author = {Sandi, Carmen and Gerstner, Wulfram and Luk\v{s}ys, Gediminas},
+booktitle = {Advances in Neural Information Processing Systems},
+editor = {D. Koller and D. Schuurmans and Y. Bengio and L. Bottou},
+pages = {},
+publisher = {Curran Associates, Inc.},
+title = {Stress, noradrenaline, and realistic prediction of mouse behaviour using reinforcement learning},
+url = {https://proceedings.neurips.cc/paper_files/paper/2008/file/62e7f2e090fe150ef8deb4466fdc81b3-Paper.pdf},
+volume = {21},
+year = {2008},
+memo={LC活動以外の情報も用いていることには注意},
+abstract={マウスの強化学習の行動をモデル化、メタパラメタをLC活動などから推定。活動の高さが探索/利用率や割引率に影響を及ぼす傾向が見られる。},
+tags={RL, neuromodulation, LC-NA}
+}
+
+@article{usher1999role,
+  title={The role of locus coeruleus in the regulation of cognitive performance},
+  author={Usher, Marius and Cohen, Jonathan D and Servan-Schreiber, David and Rajkowski, Janusz and Aston-Jones, Gary},
+  journal={Science},
+  volume={283},
+  number={5401},
+  pages={549--554},
+  year={1999},
+  publisher={American Association for the Advancement of Science},
+  memo={発火率に比例するような形でNA量が増えるのは妥当な気がするが、活性化ゲインはそうではない場合もあるのでこれが全てではない},
+  abstract={サルの視覚弁別課題の振る舞いをSNNによるLCモデルとLC-NAによる神経修飾を考慮してモデル化。実際にも見られる位相性と持続性の活動が再現。},
+  tags={LC-NA, neuromodulation}
+}
+
+@article{benarroch2018locus,
+  title={Locus coeruleus},
+  author={Benarroch, Eduardo E},
+  journal={Cell and tissue research},
+  volume={373},
+  number={1},
+  pages={221--232},
+  year={2018},
+  publisher={Springer},
+  memo={なし},
+  abstract={青斑核、Locus Coeruleusの役割について。覚醒やストレス、注意、姿勢制御など。},
+  tags={LC-NA, neuromodulation, arousal}
+}
+
+@article{yackle2017breathing,
+  title={Breathing control center neurons that promote arousal in mice},
+  author={Yackle, Kevin and Schwarz, Lindsay A and Kam, Kaiwen and Sorokin, Jordan M and Huguenard, John R and Feldman, Jack L and Luo, Liqun and Krasnow, Mark A},
+  journal={Science},
+  volume={355},
+  number={6332},
+  pages={1411--1415},
+  year={2017},
+  publisher={American Association for the Advancement of Science},
+  memo={これによって呼吸から認知系への経路がわかる},
+  abstract={呼吸系CPGと青斑核ニューロンの経路について},
+  tags={respiration, LC-NA}
+}
+
+@article{quintero2017theoretical,
+  title={Theoretical perspectives on central chemosensitivity: CO2/H+-sensitive neurons in the locus coeruleus},
+  author={Quintero, Maria C and Putnam, Robert W and Cordovez, Juan M},
+  journal={PLOS Computational Biology},
+  volume={13},
+  number={12},
+  pages={e1005853},
+  year={2017},
+  publisher={Public Library of Science San Francisco, CA USA},
+  memo={なし},
+  abstract={LCにCO2のrecepterが存在し、その影響でリズムが同期する。},
+  tags={respiration, LC-NA}
+}
+
+@article{molkov2014physiological,
+  title={Physiological and pathophysiological interactions between the respiratory central pattern generator and the sympathetic nervous system},
+  author={Molkov, Yaroslav I and Zoccal, Daniel B and Baekey, David M and Abdala, Ana PL and Machado, Benedito H and Dick, Thomas E and Paton, Julian FR and Rybak, Ilya A},
+  journal={Progress in brain research},
+  volume={212},
+  pages={1--23},
+  year={2014},
+  publisher={Elsevier},
+  memo={能動呼吸への切り替えとかもできるらしい},
+  abstract={生理学的な呼吸器数理モデルについて},
+  tags={respiration}
+}
+
+@article{yonekura2022neuromodulatory,
+  title={A neuromodulatory model for determining the effect of emotion-respiration-cognition coupling on the time-to-respond},
+  author={Yonekura, Shogo and Cueto, Julius and Kanazawa, Hoshinori and Atsumi, Noritoshi and Hirabayashi, Satoko and Iwamoto, Masami and Kuniyoshi, Yasuo},
+  journal={bioRxiv},
+  pages={2022--03},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory},
+  memo={なし},
+  abstract={呼吸青斑核カップリングを利用した意思決定モデルの実装がされており、刺激に対する反応時間の呼吸位相への依存性が示されている。},
+  tags={respiration, LC-NA, neuromodulation}
+}
+
+@article{usher2002neuromodulation,
+  title={Neuromodulation of decision and response selection},
+  author={Usher, Marius and Davelaar, Eddy J},
+  journal={Neural Networks},
+  volume={15},
+  number={4-6},
+  pages={635--645},
+  year={2002},
+  publisher={Elsevier},
+  memo={なし、よく読んでない},
+  abstract={意思決定におけるNA神経修飾の役割理解の数理モデル},
+  tags={LC-NA, neuromodulation}
+}
+
+@article{cao2021binocular,
+  title={Binocular rivalry reveals an out-of-equilibrium neural dynamics suited for decision-making},
+  author={Cao, Robin and Pastukhov, Alexander and Aleshin, Stepan and Mattia, Maurizio and Braun, Jochen},
+  journal={elife},
+  volume={10},
+  pages={e61581},
+  year={2021},
+  publisher={eLife Sciences Publications, Ltd},
+  memo={多安定系モデルと、その支配ダイナミクスが不確かな意思決定を反映している？},
+  abstract={perceptual decision makingでは根拠入力が遮断されるなどを反映したBRモデル},
+  tags={BR}
+}
+
+@inproceedings{maekawa2019iowa,
+  title={アイオワ・ギャンブル課題における認知の切り替えに内受容感覚が与える影響},
+  author={前川亮 and 片渕一徳 and 乾敏郎},
+  booktitle={日本認知心理学会発表論文集 日本認知心理学会第 17 回大会},
+  pages={23},
+  year={2019},
+  organization={日本認知心理学会},
+  memo={心拍追跡で評価},
+  abstract={IGTに逆転学習的手法を用いた実験。切り替えに気づくまでの試行数、切り替え直後の成績と内受容精度が正の相関。},
+  tags={SMH, IGT}
+}
+
+@incollection{kahneman2013prospect,
+  title={Prospect theory: An analysis of decision under risk},
+  author={Kahneman, Daniel and Tversky, Amos},
+  booktitle={Handbook of the fundamentals of financial decision making: Part I},
+  pages={99--127},
+  year={2013},
+  publisher={World Scientific},
+  memo={なし},
+  abstract={プロスペクト理論について},
+  tags={PT}
+}
+
+@article{tversky1992advances,
+  title={Advances in prospect theory: Cumulative representation of uncertainty},
+  author={Tversky, Amos and Kahneman, Daniel},
+  journal={Journal of Risk and uncertainty},
+  volume={5},
+  pages={297--323},
+  year={1992},
+  publisher={Springer},
+  memo={なし},
+  abstract={Cumulative prospect theoryによって定式化。},
+  tags={PT}
+}
+
+@incollection{eshelman1993real,
+  title={Real-coded genetic algorithms and interval-schemata},
+  author={Eshelman, Larry J and Schaffer, J David},
+  booktitle={Foundations of genetic algorithms},
+  volume={2},
+  pages={187--202},
+  year={1993},
+  publisher={Elsevier},
+  memo={なし},
+  abstract={実数値個体でのGAについて、BLXなど},
+  tags={GA}
+}
+
+@article{nakamura2018respiratory,
+  title={Respiratory modulation of cognitive performance during the retrieval process},
+  author={Nakamura, Nozomu H and Fukunaga, Masaki and Oku, Yoshitaka},
+  journal={PLoS One},
+  volume={13},
+  number={9},
+  pages={e0204021},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA},
+  memo={呼気から吸気への転移が大きくパフォーマンスを揺るがす},
+  abstract={呼吸位相と認知パフォーマンスの関係。},
+  tags={respiration}
+}
+
+@article{oyamada1998respiration,
+  title={Respiration-modulated membrane potential and chemosensitivity of locus coeruleus neurones in the in vitro brainstem-spinal cord of the neonatal rat},
+  author={Oyamada, Y and Ballantyne, D and M{\"u}ckenhoff, K and Scheid, P},
+  journal={The Journal of physiology},
+  volume={513},
+  number={2},
+  pages={381--398},
+  year={1998},
+  publisher={Wiley Online Library},
+  memo={なし},
+  abstract={LCと呼吸の同期について},
+  tags={respiration, LC-NA}
+}
+
+@article{melnychuk2018coupling,
+  title={Coupling of respiration and attention via the locus coeruleus: Effects of meditation and pranayama},
+  author={Melnychuk, Michael Christopher and Dockree, Paul M and O'Connell, Redmond G and Murphy, Peter R and Balsters, Joshua H and Robertson, Ian H},
+  journal={Psychophysiology},
+  volume={55},
+  number={9},
+  pages={e13091},
+  year={2018},
+  publisher={Wiley Online Library},
+  memo={なし},
+  abstract={LCと呼吸の同期について},
+  tags={respiration, LC-NA}
+}
+
+@article{shiv2005dark,
+  title={The dark side of emotion in decision-making: When individuals with decreased emotional reactions make more advantageous decisions},
+  author={Shiv, Baba and Loewenstein, George and Bechara, Antoine},
+  journal={Cognitive brain research},
+  volume={23},
+  number={1},
+  pages={85--92},
+  year={2005},
+  publisher={Elsevier},
+  memo={なし},
+  abstract={脳損傷や薬物依存は投資判断におけるリスク感受性の低下と関連がある。健常ならば前の判断の影響を受ける。},
+  tags={emotion, SMH}
+}
+
+@article{dalgleish2004neuropsychological,
+  title={Neuropsychological processing associated with recovery from depression after stereotactic subcaudate tractotomy},
+  author={Dalgleish, Tim and Yiend, Jenny and Bramham, Jessica and Teasdale, John D and Ogilvie, Alan D and Malhi, Gin and Howard, Robert},
+  journal={American Journal of Psychiatry},
+  volume={161},
+  number={10},
+  pages={1913--1916},
+  year={2004},
+  publisher={Am Psychiatric Assoc},
+  memo={なし},
+  abstract={鬱などにおいて意思決定パフォーマンスの低さが報酬への感受性の低下を意味している},
+  tags={emotion, SMH}
+}
+
+@article{vijayraghavan2007inverted,
+  title={Inverted-U dopamine D1 receptor actions on prefrontal neurons engaged in working memory},
+  author={Vijayraghavan, Susheel and Wang, Min and Birnbaum, Shari G and Williams, Graham V and Arnsten, Amy FT},
+  journal={Nature neuroscience},
+  volume={10},
+  number={3},
+  pages={376--384},
+  year={2007},
+  publisher={Nature Publishing Group US New York},
+  memo={なし},
+  abstract={適度なDopamineアゴニスト下ではworking memory関連のPFCニューロンが最も活性。},
+  tags={neuromodulation, invU}
+}
+
+@article{forte2021heart,
+  title={Heart rate variability and decision-making: Autonomic responses in making decisions},
+  author={Forte, Giuseppe and Morelli, Matteo and Casagrande, Maria},
+  journal={Brain Sciences},
+  volume={11},
+  number={2},
+  pages={243},
+  year={2021},
+  publisher={MDPI},
+  memo={なし},
+  abstract={HRVと意思決定パフォーマンスの関係。HRVが高い=落ち着いた呼吸ほど高い傾向。},
+  tags={respiration, SMH}
+}
+
+@article{moccia2021heart,
+  title={Heart rate variability and interoceptive accuracy predict impaired decision-making in Gambling Disorder},
+  author={Moccia, Lorenzo and Quintigliano, Maria and Janiri, Delfina and De Martin, Valentina and Rogier, Guyonne and Sani, Gabriele and Janiri, Luigi and Velotti, Patrizia and Gallese, Vittorio and Speranza, Anna Maria and others},
+  journal={Journal of Behavioral Addictions},
+  volume={10},
+  number={3},
+  pages={701--710},
+  year={2021},
+  publisher={Akad{\'e}miai Kiad{\'o} Budapest},
+  memo={なし},
+  abstract={ギャンブル障害と低い内受容精度の関連},
+  tags={emotion, SMH}
+}
+
+@inproceedings{okada2019,
+  title={ブレンド交叉を用いた GA による主観的効用の進化},
+  author={岡田直也 and 森山甲一 and 武藤敦子 and 松井藤五郎 and 犬塚信博},
+  booktitle={人工知能学会全国大会論文集 第 33 回 (2019)},
+  pages={4O3J702--4O3J702},
+  year={2019},
+  organization={一般社団法人 人工知能学会},
+  memo={GA部分しか読んでません},
+  abstract={実数値GAを用いた主観的効用を用いたRLエージェントの設計},
+  tags={GA}
+}
+
+@article{beerendonk2024disinhibitory,
+  title={A disinhibitory circuit mechanism explains a general principle of peak performance during mid-level arousal},
+  author={Beerendonk, Lola and Mej{\'\i}as, Jorge F and Nuiten, Stijn A and de Gee, Jan Willem and Fahrenfort, Johannes J and van Gaal, Simon},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={121},
+  number={5},
+  pages={e2312898121},
+  year={2024},
+  publisher={National Acad Sciences},
+  memo={あまり妥当かどうかはわからないが、構成論的にはそうなんだという感じ},
+  abstract={覚醒度-タスクパフォーマンスの逆U字型関係を示す神経モデルの実装。複数の抑制関係からなる。},
+  tags={arousal, invU}
+}
+
+@article{eckhoff2009optimality,
+  title={Optimality and robustness of a biophysical decision-making model under norepinephrine modulation},
+  author={Eckhoff, Philip and Wong-Lin, KongFatt and Holmes, Philip},
+  journal={Journal of Neuroscience},
+  volume={29},
+  number={13},
+  pages={4301--4311},
+  year={2009},
+  publisher={Soc Neuroscience},
+  memo={よく読んでません、力学系でパラメタを与えている？},
+  abstract={LC-NA系の意思決定における影響を時間発展系のモデルで与えている},
+  tags={LC-NA, neuromodulation}
+}
+
+@article{kim2005psychophysical,
+  title={Psychophysical magic: rendering the visible ‘invisible’},
+  author={Kim, Chai-Youn and Blake, Randolph},
+  journal={Trends in cognitive sciences},
+  volume={9},
+  number={8},
+  pages={381--388},
+  year={2005},
+  publisher={Elsevier},
+  memo={なし},
+  abstract={両眼視野闘争について},
+  tags={BR}
+}
+
+@article{molkov2010late,
+  title={Late-expiratory activity: emergence and interactions with the respiratory CpG},
+  author={Molkov, Yaroslav I and Abdala, Ana PL and Bacak, Bartholomew J and Smith, Jeffrey C and Paton, Julian FR and Rybak, Ilya A},
+  journal={Journal of neurophysiology},
+  volume={104},
+  number={5},
+  pages={2713--2729},
+  year={2010},
+  publisher={American Physiological Society Bethesda, MD},
+  memo={よく読んでないです},
+  abstract={呼吸CPGのリズムパターンを生み出すメカニズムとモデルについて},
+  tags={respiration}
+}
+
+@article{rubin2009multiple,
+  title={Multiple rhythmic states in a model of the respiratory central pattern generator},
+  author={Rubin, Jonathan E and Shevtsova, Natalia A and Ermentrout, G Bard and Smith, Jeffrey C and Rybak, Ilya A},
+  journal={Journal of neurophysiology},
+  volume={101},
+  number={4},
+  pages={2146--2165},
+  year={2009},
+  publisher={American Physiological Society},
+  memo={なし},
+  abstract={呼吸のCPGは外部刺激から再構成され、新しいリズムパターンを生み出す可能性がある},
+  tags={respiration}
 }
