multi-tag search and delete button

--- a/public/liter.bib
+++ b/public/liter.bib
@@ -323,8 +323,8 @@ year = {1996},
   pages={215--225},
   year={1996},
   publisher={Oxford University Press},
- memo={なし},
- abstract={IGT},
+ memo={健常者では(vmPFCには)特定のデッキから得た刺激と報酬、罰、善悪の表象を関連づける神経回路があることが提案されている。},
+ abstract={予期的SCRとvmPFC損傷者によるIGT成績の低さの相関からPFC損傷はSMのバイアス信号を活性化することに障害があると考えられている。},
  tags={SMH, IGT, interoception}
 }
 
@@ -337,8 +337,8 @@ year = {1996},
   pages={1293--1295},
   year={1997},
   publisher={American Association for the Advancement of Science},
- memo={なし},
- abstract={IGTの選択傾向には段階的なフェーズが存在する。},
+ memo={逆にconceptualでなくとも成功するcontrol群が存在することから、ponderingに先立った身体反応が有利選択にバイアスをかけていることが示唆されている。},
+ abstract={IGTの選択傾向にはpre-punishment, pre-hunch, hunch, conceptualといった段階的なフェーズが存在する。conceptualであってもvmPFC損傷者は課題の成績が良いとは限らなかった。明確な知識だけでは有利な選択を推定するのに不十分であることが示されている。},
  tags={SMH, IGT, interoception}
 }
 
@@ -933,4 +933,18 @@ tags={RL, neuromodulation, LC-NA}
   memo={なし},
   abstract={呼吸のCPGは外部刺激から再構成され、新しいリズムパターンを生み出す可能性がある},
   tags={respiration}
+}
+
+@article{bechara2000emotion,
+  title={Emotion, decision making and the orbitofrontal cortex},
+  author={Bechara, Antoine and Damasio, Hanna and Damasio, Antonio R},
+  journal={Cerebral cortex},
+  volume={10},
+  number={3},
+  pages={295--307},
+  year={2000},
+  publisher={Oxford University Press},
+  memo={身体は熟慮に先立つ(有利選択にたどり着いたものの概念期には到達しない被験者)こと、扁桃体関連の情動的記憶想起はvmPFC損傷と関連が薄い(意思決定障害を説明できない)こと、dordolateral(DL)PFC患者の例からworkingmemory的な短期記憶障害とvmPFC患者の意思決定障害は神経的にも認知的にも異なることが示されている。},
+  abstract={眼窩前頭皮質に注目した身体の意思決定への影響についてまとめ、恐怖の再体験、衝動性と反応抑制といった側面を新たに説明している。},
+  tags={emotion, SMH, IGT}
 }
