--- a/public/liter.bib
+++ b/public/liter.bib
@@ -879,20 +879,6 @@ tags={RL, neuromodulation, LC-NA}
   tags={arousal, invU}
 }
 
-@article{eckhoff2009optimality,
-  title={Optimality and robustness of a biophysical decision-making model under norepinephrine modulation},
-  author={Eckhoff, Philip and Wong-Lin, KongFatt and Holmes, Philip},
-  journal={Journal of Neuroscience},
-  volume={29},
-  number={13},
-  pages={4301--4311},
-  year={2009},
-  publisher={Soc Neuroscience},
-  memo={よく読んでません、力学系でパラメタを与えている？},
-  abstract={LC-NA系の意思決定における影響を時間発展系のモデルで与えている},
-  tags={LC-NA, neuromodulation}
-}
-
 @article{kim2005psychophysical,
   title={Psychophysical magic: rendering the visible ‘invisible’},
   author={Kim, Chai-Youn and Blake, Randolph},
@@ -947,4 +933,31 @@ tags={RL, neuromodulation, LC-NA}
   memo={身体は熟慮に先立つ(有利選択にたどり着いたものの概念期には到達しない被験者)こと、扁桃体関連の情動的記憶想起はvmPFC損傷と関連が薄い(意思決定障害を説明できない)こと、dordolateral(DL)PFC患者の例からworkingmemory的な短期記憶障害とvmPFC患者の意思決定障害は神経的にも認知的にも異なることが示されている。},
   abstract={眼窩前頭皮質に注目した身体の意思決定への影響についてまとめ、恐怖の再体験、衝動性と反応抑制といった側面を新たに説明している。},
   tags={emotion, SMH, IGT}
+}
+
+@article{simonovic2018performance,
+  title={Performance under stress: An eye-tracking investigation of the Iowa Gambling Task (IGT)},
+  author={Simonovic, Boban and Stupple, Edward JN and Gale, Maggie and Sheffield, David},
+  journal={Frontiers in Behavioral Neuroscience},
+  volume={12},
+  pages={217},
+  year={2018},
+  publisher={Frontiers Media SA},
+  memo={ストレスレベル=コルチゾール値の上昇が認知制御を混乱させ、注意や正確な情報処理を妨げる。直感的な処理を増やすTversky(2011)によるIGTのdual process理論(emotionalとanaliticの相互作用)についても述べている。},
+  abstract={意識的な気づきのプロセスに注目し、IGT中の注意、反射的認知(?)、課題設定の認知はストレス下で低下することからIGTのストレス下での試行にはanaliticなプロセスがemotionalより有利に働くということを示している(dual process accountも示唆される)。},
+  tags={SMH, IGT, stress}
+}
+
+@article{eckhoff2009optimality,
+  title={Optimality and robustness of a biophysical decision-making model under norepinephrine modulation},
+  author={Eckhoff, Philip and Wong-Lin, KongFatt and Holmes, Philip},
+  journal={Journal of Neuroscience},
+  volume={29},
+  number={13},
+  pages={4301--4311},
+  year={2009},
+  publisher={Society for Neuroscience},
+  memo={NEの修飾はニューロンのコンダクタンスを変更することで行われている。tonicな活動は記憶やネットワークリセットに関係している？},
+  abstract={3錐体細胞と1抑制性介在ニューロンからなるSNN意思決定モデルによってLC-NAの効果をモデル化。LCのtonicな活動とphasicな活動をそれぞれ分けて考察している。tonicは逆U字のパフォーマンス、phasicは特定の条件を設けた場合は向上が見られた。},
+  tags={LC-NA, neuromodulation}
 }
