add survey until 5/26 presentation

--- a/public/liter.bib
+++ b/public/liter.bib
@@ -961,3 +961,175 @@ tags={RL, neuromodulation, LC-NA}
   abstract={3錐体細胞と1抑制性介在ニューロンからなるSNN意思決定モデルによってLC-NAの効果をモデル化。LCのtonicな活動とphasicな活動をそれぞれ分けて考察している。tonicは逆U字のパフォーマンス、phasicは特定の条件を設けた場合は向上が見られた。},
   tags={LC-NA, neuromodulation}
 }
+
+
+@article{kozachkov2023building,
+  title={Building transformers from neurons and astrocytes},
+  author={Kozachkov, Leo and Kastanenka, Ksenia V and Krotov, Dmitry},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={120},
+  number={34},
+  pages={e2219150120},
+  year={2023},
+  publisher={National Academy of Sciences},
+  memo={アストロサイトとニューロンによるフィードバックループは異なる時空間スケールを持っており、学習や記憶に影響しているらしい。},
+  abstract={ニューロン以外にグリア細胞の一種であるアストロサイトを組み込んだネットワークでトランスフォーマーの役割を担うことができる},
+  tags={transformer, memory}
+}
+
+@misc{xu2025visualplanningletsthink,
+      title={Visual Planning: Let's Think Only with Images}, 
+      author={Yi Xu and Chengzu Li and Han Zhou and Xingchen Wan and Caiqi Zhang and Anna Korhonen and Ivan Vulić},
+      year={2025},
+      eprint={2505.11409},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2505.11409},
+      memo={なし},
+      abstract={LLMによるマルチモーダル推論はさまざま行われているが、全て言語の空間を介した推論しかできない。実際には必ずしも必要なプロセスではないのにも関わらず。画像表現のみから推論するモデルを強化学習の枠組みから提案する。VPRL。しかも既存のlanguage-basedよりもoutperformしている。},
+      tags={RL, visual}
+}
+
+@article{seth2013interoceptive,
+  title={Interoceptive inference, emotion, and the embodied self},
+  author={Seth, Anil K},
+  journal={Trends in cognitive sciences},
+  volume={17},
+  number={11},
+  pages={565--573},
+  year={2013},
+  publisher={Elsevier},
+  memo={内受容推論における予測修正と恒常性調節という2つの予測誤差修正、前部島皮質のfMRIと予測誤差符号化の相関についても述べられている。rubber hand illusionの話も出てきた。},
+  abstract={外受容感覚と行動の関係に用いられてきたActive Inferenceのような脳を予測生成モデルとして考えるアプローチを内受容感覚に関して用いることで、主観的な感情、意識体験やそれに紐づいた身体所有感覚、精神疾患の認知メカニズムについて予測脳という枠組みが重要であることを示唆している。},
+  tags={interoceptiveInference, emotion, insula, allostasis}
+}
+
+@article{gu2014interoceptive,
+  title={Interoceptive inference: homeostasis and decision-making},
+  author={Gu, Xiaosi and FitzGerald, Thomas HB},
+  journal={Trends in cognitive sciences},
+  volume={18},
+  number={6},
+  pages={269--270},
+  year={2014},
+  publisher={Elsevier},
+  memo={島皮質での内受容符号化やSomatic Marker Hypothesisの考えも包含できるらしい。},
+  abstract={内的な恒常性維持だけでなく、外部との相互作用の結果として起こる変化に適応していくプロセス=アロスタシスもinteroceptive inferenceで説明できるとしている。},
+  tags={interoceptiveInference, insula, SMH, allostasis}
+}
+
+@article{hulme2019neurocomputational,
+  title={Neurocomputational theories of homeostatic control},
+  author={Hulme, Oliver J and Morville, Tobias and Gutkin, Boris},
+  journal={Physics of life reviews},
+  volume={31},
+  pages={214--232},
+  year={2019},
+  publisher={Elsevier},
+  memo={予測誤差を最小化することに関連して、Active Inferrenceの理論との対応、アロスタシス制御についても述べられている。},
+  abstract={ホメオスタシスに関する理論を行動制御、予測の面から議論する。Drive Reduction理論を初めとした恒常性制御手法が簡潔な生存につながる行動原理しか説明できないこと、強化学習に利用された恒常性強化学習では報酬値とホメオスタシスの状態を対応付けるドライブ関数を用いることでその関数への制約がリスク回避行動や内受容感覚間の相互作用などを説明することができることが述べられている。},
+  tags={RL, interoceptiveInference, allostasis}
+}
+
+@article{nikolova2022might,
+  title={What might interoceptive inference reveal about consciousness?},
+  author={Nikolova, Niia and Waade, Peter Thestrup and Friston, Karl J and Allen, Micah},
+  journal={Review of Philosophy and Psychology},
+  volume={13},
+  number={4},
+  pages={879--906},
+  year={2022},
+  publisher={Springer},
+  memo={内受容推論が意識研究に良い進展を与えるかについては不明。},
+  abstract={さまざまな意識理論に平行して発展している内受容推論について、主観的な意識、情動、また外受容の形成への影響を論じている。また意識理論である高次思考理論、グローバルワークスペース理論、情報統合理論との対応づけも行い、皮質の階層と内受容的な予測誤差がどう結びついているのかを議論している。},
+  tags={interoceptiveInference, emotion}
+}
+
+@article{subramanian2024interoceptive,
+  title={Interoceptive inference and prediction in food-related disorders},
+  author={Subramanian, Madhav and Thaiss, Christoph A},
+  journal={Genes \& Development},
+  volume={38},
+  number={17-20},
+  pages={808--813},
+  year={2024},
+  publisher={Cold Spring Harbor Lab},
+  memo={内的な管理と外的な適応のバランスが摂食行動にも当てはまるかと思ったが、意外とinstinctなものとして片付けられそうとmeetingで言われた。},
+  abstract={脳の予測アプローチが摂食行動制御の観点で説明しうる戦略、摂食関連障害について述べている。環境に対するアロスタシス的味覚予測が新しい環境における大きな予測誤差を生み出し、それが糖尿病のような代謝や身体調節の不全を引き起こしている可能性がある。},
+  tags={interoceptiveInference, allostasis}
+}
+
+@article{gogolla2017insular,
+  title={The insular cortex},
+  author={Gogolla, Nadine},
+  journal={Current Biology},
+  volume={27},
+  number={12},
+  pages={R580--R586},
+  year={2017},
+  publisher={Elsevier},
+  memo={neuromodulationでいうと、NE, Dopamine, Ach, 5-HTの経路があるらしい。},
+  abstract={島皮質について、広い領域からの投射を受け、top-down、bottom-up経路両方に関わっている。脳のhub。},
+  tags={insula, neuromodulation}
+}
+
+@article{fermin2022insula,
+  title={An insula hierarchical network architecture for active interoceptive inference},
+  author={Fermin, Alan SR and Friston, Karl and Yamawaki, Shigeto},
+  journal={Royal Society Open Science},
+  volume={9},
+  number={6},
+  pages={220226},
+  year={2022},
+  publisher={The Royal Society},
+  memo={線条体を介したDopamine系経路が押されていて、そのつながりかたもいくつか考えられる。},
+  abstract={島皮質は不明瞭な点が多いが、autonomic neuvous systemとのつながり、PFCとのつながりから内受容感覚と脳の高次領域との階層構造を提案し、内受容推論とのつながりについて述べている。},
+  tags={insula, interoceptiveInference}
+}
+
+@article{uddin2017structure,
+  title={Structure and function of the human insula},
+  author={Uddin, Lucina Q and Nomi, Jason S and H{\'e}bert-Seropian, Benjamin and Ghaziri, Jimmy and Boucher, Olivier},
+  journal={Journal of clinical neurophysiology},
+  volume={34},
+  number={4},
+  pages={300--306},
+  year={2017},
+  publisher={LWW},
+  memo={もっと読みたい。},
+  abstract={島皮質について。その構造、auditory function、体性感覚モニター、リスク下意思決定、情動、empathy、社会的経験、attentionが述べられている。},
+  tags={insula, SMH, emotion}
+}
+
+@book{sartre1971sketch,
+  title={Sketch for a Theory of the Emotions},
+  author={Sartre, Jean-Paul},
+  year={1971},
+  publisher={Routledge},
+  memo={情動の目的性。世界との行為のやりとりがあり、それが変容することへの意識が情動であると述べていたり、それが魔術的という形容を使っていた(おそらく劇的という話であろう)。},
+  abstract={サルトルによる現象学的、心理学的な視点からの情動論。情動は世界の知覚を変えること。},
+  tags={emotion, phenomenology}
+}
+
+@article{澤田唯人2013感情的な身体,
+  title={感情的な身体 感情的行為論の礎石},
+  author={澤田唯人},
+  journal={現代社会学理論研究},
+  volume={7},
+  pages={41--53},
+  year={2013},
+  publisher={日本社会学理論学会},
+  memo={もっと読みたい},
+  abstract={サルトルなどによる現象学的情動理論をまとめてくれている。},
+  tags={emotion, phenomenology}
+}
+
+@book{barrett2017emotions,
+  title={How emotions are made: The secret life of the brain},
+  author={Barrett, Lisa Feldman},
+  year={2017},
+  publisher={Pan Macmillan},
+  memo={embodied simulationやcontextによって同じ表情やその他の反応でも情動は異なること、amygdala損傷患者にも関わらず情動表現が可能である例などについて述べられている。},
+  abstract={情動は身体反応に固有で決まるものではなく、過去の経験などから蓄積された粒度によって毎回構築されて反応として表出するというtheory of constructed emotionsについて。情動の扱いとして、リバースエンジニアリング不可、全体としてしか論じられない、個々のニューロンから予測できない行動の創発、複数のニューロンが一つの反応に対応する縮退が挙げられている。},
+  tags={emotion}
+}
