--- a/public/liter.bib
+++ b/public/liter.bib
@@ -1133,3 +1133,29 @@ tags={RL, neuromodulation, LC-NA}
   abstract={情動は身体反応に固有で決まるものではなく、過去の経験などから蓄積された粒度によって毎回構築されて反応として表出するというtheory of constructed emotionsについて。情動の扱いとして、リバースエンジニアリング不可、全体としてしか論じられない、個々のニューロンから予測できない行動の創発、複数のニューロンが一つの反応に対応する縮退が挙げられている。},
   tags={emotion}
 }
+
+@article{tschantz2022simulating,
+  title={Simulating homeostatic, allostatic and goal-directed forms of interoceptive control using active inference},
+  author={Tschantz, Alexander and Barca, Laura and Maisto, Domenico and Buckley, Christopher L and Seth, Anil K and Pezzulo, Giovanni},
+  journal={Biological Psychology},
+  volume={169},
+  pages={108266},
+  year={2022},
+  publisher={Elsevier},
+  memo={継続的な外受容=コンテキスト的変化、cuedな変化は扱いにくい。非常に抽象的な構造なので疾患との対応付け以上の何かはない。離散と連続を同時に扱うシステムである必要性は疑問。},
+  abstract={内受容推論モデルをpredictive codingによって自律神経反射によるhomeostaticと内受容信念の変化によるallostaticを再現。分布の正確性パラメタと鬱、perkinson病、autismなどとの対応。将来的な必要性によって正しい選択肢を選ぶ目的指向型モデルについて述べられている。},
+  tags={interoceptiveInference, allostasis}
+}
+
+@article{smith2019simulating,
+  title={Simulating emotions: An active inference model of emotional state inference and emotion concept learning},
+  author={Smith, Ryan and Parr, Thomas and Friston, Karl J},
+  journal={Frontiers in psychology},
+  volume={10},
+  pages={2844},
+  year={2019},
+  publisher={Frontiers Media SA},
+  memo={元から行列の要素の枠組みとして定義されているため本当に新たなものかは懐疑的である。注意が自己と周囲という分けられ方をしているのも気になる。},
+  abstract={能動推論プロセスを用いて情動概念の獲得、学習をシミュレートするtoy-modelでの実験。POMDPで定式化されており、情動概念と注意状態の隠れ状態(angry, afraid, happy, sadの4つの情動概念と自己へ/環境への2つの注意)を身体的反応などの経験を通して探索、学習させていく。情動概念を全く持たない状態を幼少期、3つの概念が学習済みの状態を成人期と定義し、学習を行わせ、結果として適切な精度の経験によって新たな情動概念が生成できること、afraidの情動はangryと示す反応が似ていることから学習は困難であった。},
+  tags={interoceptiveInference, emotion}
+}
